Reorganize the code, with App the root and EngineInfo a component. Usage of axios to get from the rest api.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,5 +1,8 @@
 {
     "component": "Component",
     "welcome": "Welcome to React",
-		"viewreactdoc": "View Reactstrap Docs"
+		"viewreactdoc": "View Reactstrap Docs",
+		"installedOn": "Installed on ",
+		"today": "Today, ",
+		"edit": "Edit"
 }
