--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,8 +1,13 @@
 {
-    "component": "Component",
-    "welcome": "Welcome to React",
-		"viewreactdoc": "View Reactstrap Docs",
 		"installedOn": "Installed on ",
 		"today": "Today, ",
-		"edit": "Edit"
+		"edit": "Edit",
+		"modalTitle": "Engine Edition",
+		"save": "Save",
+		"cancel": "Cancel",
+		"brand": "Brand",
+		"model": "Model",
+		"installDateLabel": "Installation Date",
+		"engineAge": "Engine Age",
+		"serialPort": "Serial Port"
 }
