Add the task table

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -9,5 +9,6 @@
 		"model": "Model",
 		"installDateLabel": "Installation Date",
 		"engineAge": "Engine Age",
-		"serialPort": "Serial Port"
+		"serialPort": "Serial Port",
+		"tasklistTitle": "Task list"
 }
