--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,13 +1,14 @@
 {
-	  "installedOn": "Installé le ",
-		"today": "Aujourd'hui, ",
-		"edit": "Editer",
-		"modalTitle": "Edition des information du moteur",
-		"save": "Sauver",
-		"cancel": "Annuler",
-		"brand": "Marque",
-		"model": "Modèle",
-		"installDateLabel": "Date d'installation",
-		"engineAge": "Age du moteur",
-		"serialPort": "Port Série"
+	"installedOn": "Installé le ",
+	"today": "Aujourd'hui, ",
+	"edit": "Editer",
+	"modalTitle": "Edition des information du moteur",
+	"save": "Sauver",
+	"cancel": "Annuler",
+	"brand": "Marque",
+	"model": "Modèle",
+	"installDateLabel": "Date d'installation",
+	"engineAge": "Age du moteur",
+	"serialPort": "Port Série",
+	"tasklistTitle": "Liste des taches"
 }
