--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,28 +1,32 @@
 {
-		"installedOn": "Installed on ",
-		"today": "Today, ",
-		"edit": "Edit",
-		"modalTitle": "Engine Edition",
-		"save": "Save",
-		"cancel": "Cancel",
-		"brand": "Brand",
-		"model": "Model",
-		"installDateLabel": "Installation Date",
-		"engineAge": "Engine Age",
-		"serialPort": "Serial Port",
-		"tasklistTitle": "Task list",
-		"createbutton": "Create",
-		"taskname": "Task name",
-		"todo": "To do",
-		"taskdesc": "Description",
-		"shouldhavebeendone": "Should have been done the ",
-		"shouldbedone": "Should be done the ",
-		"shouldhavebeendonein": "Should have been done ",
-		"shouldbedonein1": "Should be done in ",
-		"shouldhavebeendonein2": " engine ago or ",
-		"shouldbedonein2": " engine or ",
-		"modalCreateTaskTitle": "Task creation",
-		"name": "Name",
-		"engineHours": "Period in engine hour",
-		"month": "Period in month"
+	"installedOn": "Installed on ",
+	"today": "Today, ",
+	"edit": "Edit",
+	"modalTitle": "Engine Edition",
+	"save": "Save",
+	"cancel": "Cancel",
+	"brand": "Brand",
+	"model": "Model",
+	"installDateLabel": "Installation Date",
+	"engineAge": "Engine Age",
+	"serialPort": "Serial Port",
+	"tasklistTitle": "Task list",
+	"createbutton": "Create",
+	"taskname": "Task name",
+	"todo": "To do",
+	"taskdesc": "Description",
+	"shouldhavebeendone": "Should have been done the ",
+	"shouldbedone": "Should be done the ",
+	"shouldhavebeendonein": "Should have been done ",
+	"shouldbedonein1": "Should be done in ",
+	"shouldhavebeendonein2": " engine ago or ",
+	"shouldbedonein2": " engine or ",
+	"modalCreateTaskTitle": "Task creation",
+	"name": "Name",
+	"engineHours": "Period in engine hour",
+	"month": "Period in month",
+	"tobedonemonth": "To do every ",
+	"monthunit": " month",
+	"orevery": " or every ",
+	"monthperiod": "{month, plural, one {month} other {# months}}"   
 }
