--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -28,5 +28,7 @@
 	"tobedonemonth": "A effectuer tous les ",
 	"monthunit": " mois",
 	"orevery": " ou tous les ",
-	"monthperiod": "{month, plural, one {mois} other {# mois}}"  
+	"monthperiod": "{month, plural, one {mois} other {# mois}}",
+	"ackDate": "Date de réalisation",
+	"remarks": "Remarques"
 }
