Add the retry policy for axios. Rename ModalCreateTask to ModalEditTask because it is now used for both edition and creation. Plug the task edition on the task detail panel.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -30,5 +30,6 @@
 	"orevery": " or every ",
 	"monthperiod": "{month, plural, one {month} other {# months}}",
 	"ackDate": "Realisation date",
-	"remarks": "Remarks"
+	"remarks": "Remarks",
+	"modalEditTaskTitle": "Task edition"
 }
