--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -31,5 +31,7 @@
 	"monthperiod": "{month, plural, one {mois} other {# mois}}",
 	"ackDate": "Date de réalisation",
 	"remarks": "Remarques",
-	"modalEditTaskTitle": "Edition d'une tache"
+	"modalEditTaskTitle": "Edition d'une tache",
+	"delete": "Supprimer",
+	"ack": "Acquitter"
 }
