--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -33,5 +33,8 @@
 	"remarks": "Remarks",
 	"modalEditTaskTitle": "Task edition",
 	"delete": "Delete",
-	"ack": "Acknowledge"
+	"ack": "Acknowledge",
+	"date": "Date",
+	"modalEditEntryTitle": "Entry edition",
+	"modalAckTitle": "Task acknowledgement"
 }
