--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -36,5 +36,13 @@
 	"ack": "Acknowledge",
 	"date": "Date",
 	"modalEditEntryTitle": "Entry edition",
-	"modalAckTitle": "Task acknowledgement"
+	"modalAckTitle": "Task acknowledgement",
+	"yes": "Yes",
+	"no": "No",
+	"defaultTitle": "",
+	"defaultMsg": "",
+	"taskDeleteTitle": "Delete task",
+	"taskDeleteMsg": "Are you sure you want to delete this task?",
+	"entryDeleteTitle": "Delete entry",
+	"entryDeleteMsg": "Are you sure you want to delete this entry?"
 }
