Handle the new web api

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,6 +3,7 @@
 	"today": "Today, ",
 	"edit": "Edit",
 	"modalTitle": "Engine Edition",
+	"modalCreationTitle": "Engine Creation",
 	"save": "Save",
 	"cancel": "Cancel",
 	"brand": "Brand",
