--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -3,6 +3,7 @@
 	"today": "Aujourd'hui, ",
 	"edit": "Editer",
 	"modalTitle": "Edition des information du moteur",
+	"modalCreationTitle": "Création d'un moteur",
 	"save": "Sauver",
 	"cancel": "Annuler",
 	"brand": "Marque",
