Refactor a lot of names

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -2,14 +2,14 @@
 	"installedOn": "Installé le ",
 	"today": "Aujourd'hui, ",
 	"edit": "Editer",
-	"modalTitle": "Edition des information du moteur",
-	"modalCreationTitle": "Création d'un moteur",
+	"modalTitle": "Edition des information de l'équipement",
+	"modalCreationTitle": "Création d'un équipement",
 	"save": "Sauver",
 	"cancel": "Annuler",
 	"brand": "Marque",
 	"model": "Modèle",
 	"installDateLabel": "Date d'installation",
-	"engineAge": "Age du moteur",
+	"age": "Age de l'équipement",
 	"serialPort": "Port Série",
 	"tasklistTitle": "Liste des taches",
 	"createbutton": "Créer",
@@ -20,11 +20,11 @@
 	"shouldbedone": "Devrait être fait ",
 	"shouldhavebeendonein": "Aurait due être fait il y a ",
 	"shouldbedonein1": "Devrait être fait dans ",
-	"shouldhavebeendonein2": " moteur ou le ",
-	"shouldbedonein2": " moteur ou le ",
+	"shouldhavebeendonein2": " équipement ou le ",
+	"shouldbedonein2": " équipement ou le ",
 	"modalCreateTaskTitle": "Création d'une tache",
 	"name": "Nom",
-	"engineHours": "Période en heure moteur",
+	"usagePeriodInHour": "Période en heure à l'usage",
 	"month": "Période en mois",
 	"tobedonemonth": "A effectuer tous les ",
 	"monthunit": " mois",
