--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,14 +2,14 @@
 	"installedOn": "Installed on ",
 	"today": "Today, ",
 	"edit": "Edit",
-	"modalTitle": "Engine Edition",
-	"modalCreationTitle": "Engine Creation",
+	"modalTitle": "Equipment Edition",
+	"modalCreationTitle": "Equipment Creation",
 	"save": "Save",
 	"cancel": "Cancel",
 	"brand": "Brand",
 	"model": "Model",
 	"installDateLabel": "Installation Date",
-	"engineAge": "Engine Age",
+	"age": "Equipment Age",
 	"serialPort": "Serial Port",
 	"tasklistTitle": "Task list",
 	"createbutton": "Create",
@@ -20,11 +20,11 @@
 	"shouldbedone": "Should be done the ",
 	"shouldhavebeendonein": "Should have been done ",
 	"shouldbedonein1": "Should be done in ",
-	"shouldhavebeendonein2": " engine ago or ",
-	"shouldbedonein2": " engine or ",
+	"shouldhavebeendonein2": " equipment ago or ",
+	"shouldbedonein2": " equipment or ",
 	"modalCreateTaskTitle": "Task creation",
 	"name": "Name",
-	"engineHours": "Period in engine hour",
+	"usagePeriodInHour": "Period in usage hour",
 	"month": "Period in month",
 	"tobedonemonth": "To do every ",
 	"monthunit": " month",
