Use async/await in the code instead of callback

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,6 @@
 {
+	"loginfailed": "Login failed",
+	"loginerror": "Error:",
 	"installedOn": "Installed on ",
 	"today": "Today, ",
 	"edit": "Edit",
