--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,4 +1,6 @@
 {
+	"loginfailed": "Le login a échoué",
+	"loginerror": "Erreur :",
 	"installedOn": "Installé le ",
 	"today": "Aujourd'hui, ",
 	"edit": "Editer",
