--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -58,5 +58,7 @@
 	"alreadyexisting": "existe déjà",
 	"isrequired": "est requis",
 	"signup": "S'inscrire",
-	"errorFetching": "Une erreur est survenue ..."
+	"errorFetching": "Une erreur est survenue ...",
+	"equipmentDeleteTitle": "Suppression d'un équipement",
+	"equipmentDeleteMsg": "Etes vous sure de vouloir supprimer cet équipement ?"
 }
