--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -25,7 +25,7 @@
 	"shouldhavebeendonein2": " equipment ago or ",
 	"shouldbedonein2": " equipment or ",
 	"modalCreateTaskTitle": "Task creation",
-	"name": "Name",
+	"name": "Last Name",
 	"usagePeriodInHour": "Period in usage hour",
 	"month": "Period in month",
 	"tobedonemonth": "To do every ",
@@ -57,9 +57,10 @@
 	"modalSignupTitle": "Signup",
 	"alreadyexisting": "already exist",
 	"isrequired": "is required",
-	"signup": "Signup",
+	"signup": "Sign up",
 	"errorFetching": "Something went wrong ...",
 	"equipmentDeleteTitle": "Delete Equipment",
 	"equipmentDeleteMsg": "Are you sure you want to delete this equipment?",
-	"import": "Import"
+	"import": "Import",
+	"needVerification": "needs to be checked. Please check your emails."
 }
