Add a feature to resend the verification email

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -73,5 +73,6 @@
 	"confirmPasswordChange": "An email has been sent. Please, confirm your password change by clicking the link.",
 	"changingPassword": "Changing password ...",
 	"message": "Error message :",
-	"passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords."
+	"passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords.",
+	"sendVerification": "Resend Check Email"
 }
