Change a label for Equipment name which was confused with last name user label.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -15,6 +15,7 @@
 	"serialPort": "Serial Port",
 	"tasklistTitle": "Task list",
 	"createbutton": "Create",
+	"equipmentname": "Name",
 	"taskname": "Task name",
 	"todo": "To do",
 	"taskdesc": "Description",
