Add a tooltip for the age o the equipment

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -11,7 +11,8 @@
 	"brand": "Brand",
 	"model": "Model",
 	"installDateLabel": "Installation Date",
-	"age": "Equipment Age",
+	"age": "Equipment Age in hour",
+	"ageToolTip": "Amount of time in hour the equipment was used.",
 	"serialPort": "Serial Port",
 	"tasklistTitle": "Task list",
 	"createbutton": "Create",
