--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -11,7 +11,8 @@
 	"brand": "Marque",
 	"model": "Modèle",
 	"installDateLabel": "Date d'installation",
-	"age": "Age de l'équipement",
+	"age": "Age de l'équipement en heure",
+	"ageToolTip": "Nombre d'heure d'utilisation de l'équipement",
 	"serialPort": "Port Série",
 	"tasklistTitle": "Liste des taches",
 	"createbutton": "Créer",
