Moved the equipment info

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,7 +1,7 @@
 {
 	"loginfailed": "Login failed",
 	"loginerror": "Error:",
-	"installedOn": "Installed on ",
+	"installedOn": "installed on ",
 	"today": "Today, ",
 	"edit": "Edit",
 	"modalTitle": "Equipment Edition",
