--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,7 +1,7 @@
 {
 	"loginfailed": "Le login a échoué",
 	"loginerror": "Erreur :",
-	"installedOn": "Installé le ",
+	"installedOn": "installé le ",
 	"today": "Aujourd'hui, ",
 	"edit": "Editer",
 	"modalTitle": "Edition des information de l'équipement",
