--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -77,5 +77,6 @@
 	"message": "Message d'erreur :",
 	"passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
 	"sendVerification": "Renvoyer la Vérification",
-	"status": "Statut"
+	"status": "Statut",
+	"close": "Fermer"
 }
