Add a title in task history component

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -78,5 +78,6 @@
 	"passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords.",
 	"sendVerification": "Resend Check Email",
 	"status": "Status",
-	"close": "Close"
+	"close": "Close",
+	"taskHistoryTitle": "Task history"
 }
