--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -78,5 +78,6 @@
 	"passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
 	"sendVerification": "Renvoyer la Vérification",
 	"status": "Statut",
-	"close": "Fermer"
+	"close": "Fermer",
+	"taskHistoryTitle": "Historique"
 }
