Improve the render of the equipment age in history task table when the equipment usage is measured with the time.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -13,6 +13,7 @@
 	"installDateLabel": "Installation Date",
 	"age": "Equipment Age in hour",
 	"ageToolTip": "Amount of time in hour the equipment was used.",
+	"ageColumHeader": "Equipment Age",
 	"serialPort": "Serial Port",
 	"tasklistTitle": "Task list",
 	"createbutton": "Create",
@@ -34,6 +35,8 @@
 	"monthunit": " month",
 	"orevery": " or every ",
 	"monthperiod": "{month, plural, one {month} other {# months}}",
+	"yearperiod": "{year, plural, one {year} other {# years}}",
+	"dayperiod": "{day, plural, one {day} other {# days}}",
 	"ackDate": "Realisation date",
 	"remarks": "Remarks",
 	"modalEditTaskTitle": "Task edition",
