--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -13,6 +13,7 @@
 	"installDateLabel": "Date d'installation",
 	"age": "Age de l'équipement en heure",
 	"ageToolTip": "Nombre d'heure d'utilisation de l'équipement",
+	"ageColumHeader": "Age de l'équipement",
 	"serialPort": "Port Série",
 	"tasklistTitle": "Liste des taches",
 	"createbutton": "Créer",
@@ -34,6 +35,8 @@
 	"monthunit": " mois",
 	"orevery": " ou tous les ",
 	"monthperiod": "{month, plural, one {mois} other {# mois}}",
+	"yearperiod": "{year, plural, one {année} other {# {années}}",
+	"dayperiod": "{day, plural, one {jour} other {# jours}}",
 	"ackDate": "Date de réalisation",
 	"remarks": "Remarques",
 	"modalEditTaskTitle": "Edition d'une tache",
