Change the format fr the singular unit period

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -34,9 +34,9 @@
 	"tobedonemonth": "To do every ",
 	"monthunit": " month",
 	"orevery": " or every ",
-	"monthperiod": "{month, plural, one {month} other {# months}}",
-	"yearperiod": "{year, plural, one {year} other {# years}}",
-	"dayperiod": "{day, plural, one {day} other {# days}}",
+	"monthperiod": "{month, plural, one {# month} other {# months}}",
+	"yearperiod": "{year, plural, one {# year} other {# years}}",
+	"dayperiod": "{day, plural, one {# day} other {# days}}",
 	"ackDate": "Realisation date",
 	"remarks": "Remarks",
 	"modalEditTaskTitle": "Task edition",
