--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -34,9 +34,9 @@
 	"tobedonemonth": "A effectuer tous les ",
 	"monthunit": " mois",
 	"orevery": " ou tous les ",
-	"monthperiod": "{month, plural, one {mois} other {# mois}}",
-	"yearperiod": "{year, plural, one {année} other {# {années}}",
-	"dayperiod": "{day, plural, one {jour} other {# jours}}",
+	"monthperiod": "{month, plural, one {# mois} other {# mois}}",
+	"yearperiod": "{year, plural, one {# année} other {# {années}}",
+	"dayperiod": "{day, plural, one {# jour} other {# jours}}",
 	"ackDate": "Date de réalisation",
 	"remarks": "Remarques",
 	"modalEditTaskTitle": "Edition d'une tache",
