Sort alphabetically translation files

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,92 +1,92 @@
 {
-	"loginfailed": "Login failed",
-	"loginerror": "Error:",
-	"installedOn": "installed on ",
-	"today": "Today, ",
-	"edit": "Edit",
-	"modalTitle": "Equipment Edition",
-	"modalCreationTitle": "Equipment Creation",
-	"save": "Save",
-	"cancel": "Cancel",
-	"brand": "Brand",
-	"model": "Model",
-	"installDateLabel": "Installation Date",
-	"age": "Equipment Age in hour",
-	"ageToolTip": "Amount of time in hour the equipment was used.",
-	"ageColumHeader": "Equipment Age",
-	"serialPort": "Serial Port",
-	"tasklistTitle": "Task list",
-	"createbutton": "Create",
-	"equipmentname": "Name",
-	"taskname": "Task name",
-	"todo": "To do",
-	"taskdesc": "Description",
-	"shouldhavebeendone": "Should have been done the ",
-	"shouldbedone": "Should be done the ",
-	"shouldhavebeendonein": "Should have been done ",
-	"shouldbedonein1": "Should be done in ",
-	"shouldhavebeendonein2": " equipment ago or ",
-	"shouldbedonein2": " equipment or ",
-	"modalCreateTaskTitle": "Task creation",
-	"name": "Last Name",
-	"usagePeriodInHour": "Period in usage hour",
-	"month": "Period in month",
-	"tobedonemonth": "To do every ",
-	"monthunit": " month",
-	"orevery": " or every ",
-	"monthperiod": "{month, plural, one {# month} other {# months}}",
-	"yearperiod": "{year, plural, one {# year} other {# years}}",
-	"dayperiod": "{day, plural, one {# day} other {# days}}",
-	"ackDate": "Realisation date",
-	"remarks": "Remarks",
-	"modalEditTaskTitle": "Task edition",
-	"delete": "Delete",
 	"ack": "Acknowledge",
-	"date": "Date",
-	"modalEditEntryTitle": "Entry edition",
-	"modalAckTitle": "Task acknowledgement",
-	"yes": "Yes",
-	"no": "No",
-	"taskDeleteTitle": "Delete task",
-	"taskDeleteMsg": "Are you sure you want to delete this task?",
-	"entryDeleteTitle": "Delete entry",
-	"entryDeleteMsg": "Are you sure you want to delete this entry?",
-	"email": "Email",
-    "password": "Password",
-    "login": "Login",
-    "modalLogintitle": "Login with an existing account",
-    "remember": "Remember me",
-	"invalid": "is invalid",
-	"signout": "Signout",
-	"firstname": "Firstname",
-	"modalSignupTitle": "Signup",
-	"alreadyexisting": "already exist",
-	"isrequired": "is required",
-	"signup": "Sign up",
-	"errorFetching": "Something went wrong ...",
-	"equipmentDeleteTitle": "Delete Equipment",
-	"equipmentDeleteMsg": "Are you sure you want to delete this equipment?",
-	"import": "Import",
-	"needVerification": "needs to be checked. Please check your emails.",
-	"creatingUser": "Creating the user ...",
-	"emailSent": "An email has been sent. Please, confirm your email by clicking on the link.",
-	"resetPassword": "Reset password",
-	"newPassword": "New Password",
-	"retypeNewPassword": "Retype your new Password",
-	"changePassword": "Change Password",
-	"modalResetPasswordTitle": "Change your password",
-	"confirmPasswordChange": "An email has been sent. Please, confirm your password change by clicking the link.",
-	"changingPassword": "Changing password ...",
-	"message": "Error message :",
-	"passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords.",
-	"sendVerification": "Resend Check Email",
-	"status": "Status",
-	"close": "Close",
-	"taskHistoryTitle": "Task history",
+	"ackDate": "Realisation date",
+	"age": "Equipment Age in hour",
 	"ageAcquisitionType": "How do you want to measure the equipment usage time ?",
-	"timeType": "With the current time",
-	"manualEntryType": "With a manual input",
-	"trackerType": "With a usage time tracker",
+	"ageColumHeader": "Equipment Age",
+	"ageToolTip": "Amount of time in hour the equipment was used.",
 	"ageUrl": "Equipment Age URL",
-	"ageUrlToolTip": "Url allowing to get the equipment usage time in hour."
+	"ageUrlToolTip": "Url allowing to get the equipment usage time in hour.",
+	"alreadyexisting": "already exist",
+	"brand": "Brand",
+	"cancel": "Cancel",
+	"changePassword": "Change Password",
+	"changingPassword": "Changing password ...",
+	"close": "Close",
+	"confirmPasswordChange": "An email has been sent. Please, confirm your password change by clicking the link.",
+	"createbutton": "Create",
+	"creatingUser": "Creating the user ...",
+	"date": "Date",
+	"dayperiod": "{day, plural, one {# day} other {# days}}",
+	"delete": "Delete",
+	"edit": "Edit",
+	"email": "Email",
+	"emailSent": "An email has been sent. Please, confirm your email by clicking on the link.",
+	"entryDeleteMsg": "Are you sure you want to delete this entry?",
+	"entryDeleteTitle": "Delete entry",
+	"equipmentDeleteMsg": "Are you sure you want to delete this equipment?",
+	"equipmentDeleteTitle": "Delete Equipment",
+	"equipmentname": "Name",
+	"errorFetching": "Something went wrong ...",
+	"firstname": "Firstname",
+	"import": "Import",
+	"installDateLabel": "Installation Date",
+	"installedOn": "installed on ",
+	"invalid": "is invalid",
+	"isrequired": "is required",
+	"login": "Login",
+	"loginerror": "Error:",
+	"loginfailed": "Login failed",
+	"manualEntryType": "With a manual input",
+	"message": "Error message :",
+	"modalAckTitle": "Task acknowledgement",
+	"modalCreateTaskTitle": "Task creation",
+	"modalCreationTitle": "Equipment Creation",
+	"modalEditEntryTitle": "Entry edition",
+	"modalEditTaskTitle": "Task edition",
+	"modalLogintitle": "Login with an existing account",
+	"modalResetPasswordTitle": "Change your password",
+	"modalSignupTitle": "Signup",
+	"modalTitle": "Equipment Edition",
+	"model": "Model",
+	"month": "Period in month",
+	"monthperiod": "{month, plural, one {# month} other {# months}}",
+	"monthunit": " month",
+	"name": "Last Name",
+	"needVerification": "needs to be checked. Please check your emails.",
+	"newPassword": "New Password",
+	"no": "No",
+	"orevery": " or every ",
+	"password": "Password",
+	"passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords.",
+	"remarks": "Remarks",
+	"remember": "Remember me",
+	"resetPassword": "Reset password",
+	"retypeNewPassword": "Retype your new Password",
+	"save": "Save",
+	"sendVerification": "Resend Check Email",
+	"serialPort": "Serial Port",
+	"shouldbedone": "Should be done the ",
+	"shouldbedonein1": "Should be done in ",
+	"shouldbedonein2": " equipment or ",
+	"shouldhavebeendone": "Should have been done the ",
+	"shouldhavebeendonein": "Should have been done ",
+	"shouldhavebeendonein2": " equipment ago or ",
+	"signout": "Signout",
+	"signup": "Sign up",
+	"status": "Status",
+	"taskDeleteMsg": "Are you sure you want to delete this task?",
+	"taskDeleteTitle": "Delete task",
+	"taskHistoryTitle": "Task history",
+	"taskdesc": "Description",
+	"tasklistTitle": "Task list",
+	"taskname": "Task name",
+	"timeType": "With the current time",
+	"tobedonemonth": "To do every ",
+	"today": "Today, ",
+	"todo": "To do",
+	"trackerType": "With a usage time tracker",
+	"usagePeriodInHour": "Period in usage hour",
+	"yearperiod": "{year, plural, one {# year} other {# years}}",
+	"yes": "Yes"
 }
