--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,92 +1,92 @@
 {
-	"loginfailed": "Le login a échoué",
-	"loginerror": "Erreur :",
-	"installedOn": "installé le ",
-	"today": "Aujourd'hui, ",
-	"edit": "Editer",
-	"modalTitle": "Edition des information de l'équipement",
-	"modalCreationTitle": "Création d'un équipement",
-	"save": "Sauver",
-	"cancel": "Annuler",
-	"brand": "Marque",
-	"model": "Modèle",
-	"installDateLabel": "Date d'installation",
-	"age": "Age de l'équipement en heure",
-	"ageToolTip": "Nombre d'heure d'utilisation de l'équipement",
-	"ageColumHeader": "Age de l'équipement",
-	"serialPort": "Port Série",
-	"tasklistTitle": "Liste des taches",
-	"createbutton": "Créer",
-	"equipmentname": "Nom",
-	"taskname": "Nom",
-	"todo": "A faire",
-	"taskdesc": "Description",
-	"shouldhavebeendone": "Aurait due être fait le ",
-	"shouldbedone": "Devrait être fait ",
-	"shouldhavebeendonein": "Aurait due être fait il y a ",
-	"shouldbedonein1": "Devrait être fait dans ",
-	"shouldhavebeendonein2": " équipement ou le ",
-	"shouldbedonein2": " équipement ou le ",
-	"modalCreateTaskTitle": "Création d'une tache",
-	"name": "Nom",
-	"usagePeriodInHour": "Période en heure à l'usage",
-	"month": "Période en mois",
-	"tobedonemonth": "A effectuer tous les ",
-	"monthunit": " mois",
-	"orevery": " ou tous les ",
-	"monthperiod": "{month, plural, one {# mois} other {# mois}}",
-	"yearperiod": "{year, plural, one {# année} other {# {années}}",
-	"dayperiod": "{day, plural, one {# jour} other {# jours}}",
-	"ackDate": "Date de réalisation",
-	"remarks": "Remarques",
-	"modalEditTaskTitle": "Edition d'une tache",
-	"delete": "Supprimer",
 	"ack": "Acquitter",
-	"date": "Date",
-	"modalEditEntryTitle": "Edition d'une entrée",
-	"modalAckTitle": "Acquittement d'une tache",
-	"yes": "Oui",
-	"no": "Non",
-	"taskDeleteTitle": "Suppression d'une tache",
-	"taskDeleteMsg": "Etes vous sure de vouloir supprimer cette tache et son historique ?",
-	"entryDeleteTitle": "Suppression d'une entrée",
-	"entryDeleteMsg": "Etes vous sure de vouloir supprimer cette entrée ?",
-	"email": "Email",
-    "password": "Mot de passe",
-    "login": "Login",
-    "modalLogintitle": "Login avec un compte existant",
-    "remember": "Se souvenir de moi",
-	"invalid": "est invalide.",
-	"signout": "Déconnection",
-	"firstname": "Prénom",
-	"modalSignupTitle": "Signup",
-	"alreadyexisting": "existe déjà",
-	"isrequired": "est requis",
-	"signup": "S'inscrire",
-	"errorFetching": "Une erreur est survenue ...",
-	"equipmentDeleteTitle": "Suppression d'un équipement",
-	"equipmentDeleteMsg": "Etes vous sure de vouloir supprimer cet équipement ?",
-	"import": "Import",
-	"needVerification": "doit être verifié. Vérifier vos emails.",
-	"creatingUser": "Création de l'utilisateur ...",
-	"emailSent": "Un email a été envoyé. Cliquez sur le lien pour confirmer votre adresse.",
-	"resetPassword": "Mot de passe oublié",
-	"newPassword": "Nouveau mot de passe",
-	"retypeNewPassword": "Re-saisir votre nouveau mot de passe",
-	"changePassword": "Confirmer le changement",
-	"modalResetPasswordTitle": "Changement de mot de passe",
-	"confirmPasswordChange": "Un email a été envoyé. Cliquer sur le lien pour confirmer le changement.",
-	"changingPassword": "Changement du mot de passe ...",
-	"message": "Message d'erreur :",
-	"passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
-	"sendVerification": "Renvoyer la Vérification",
-	"status": "Statut",
-	"close": "Fermer",
-	"taskHistoryTitle": "Historique",
+	"ackDate": "Date de réalisation",
+	"age": "Age de l'équipement en heure",
 	"ageAcquisitionType": "Comment voulez-vous mesurez l'usage de cet équipement ?",
-	"timeType": "Avec la date courante",
-	"manualEntryType": "En la saisissant manuellement",
-	"trackerType": "Avec un tracker d'usage",
+	"ageColumHeader": "Age de l'équipement",
+	"ageToolTip": "Nombre d'heure d'utilisation de l'équipement",
 	"ageUrl": "URL pour récupérer l'age de l'équipment",
-	"ageUrlToolTip": "Url permettant de mettre à jour le temps d'utilisation de l'équipement."
+	"ageUrlToolTip": "Url permettant de mettre à jour le temps d'utilisation de l'équipement.",
+	"alreadyexisting": "existe déjà",
+	"brand": "Marque",
+	"cancel": "Annuler",
+	"changePassword": "Confirmer le changement",
+	"changingPassword": "Changement du mot de passe ...",
+	"close": "Fermer",
+	"confirmPasswordChange": "Un email a été envoyé. Cliquer sur le lien pour confirmer le changement.",
+	"createbutton": "Créer",
+	"creatingUser": "Création de l'utilisateur ...",
+	"date": "Date",
+	"dayperiod": "{day, plural, one {# jour} other {# jours}}",
+	"delete": "Supprimer",
+	"edit": "Editer",
+	"email": "Email",
+	"emailSent": "Un email a été envoyé. Cliquez sur le lien pour confirmer votre adresse.",
+	"entryDeleteMsg": "Etes vous sure de vouloir supprimer cette entrée ?",
+	"entryDeleteTitle": "Suppression d'une entrée",
+	"equipmentDeleteMsg": "Etes vous sure de vouloir supprimer cet équipement ?",
+	"equipmentDeleteTitle": "Suppression d'un équipement",
+	"equipmentname": "Nom",
+	"errorFetching": "Une erreur est survenue ...",
+	"firstname": "Prénom",
+	"import": "Import",
+	"installDateLabel": "Date d'installation",
+	"installedOn": "installé le ",
+	"invalid": "est invalide.",
+	"isrequired": "est requis",
+	"login": "Login",
+	"loginerror": "Erreur :",
+	"loginfailed": "Le login a échoué",
+	"manualEntryType": "En la saisissant manuellement",
+	"message": "Message d'erreur :",
+	"modalAckTitle": "Acquittement d'une tache",
+	"modalCreateTaskTitle": "Création d'une tache",
+	"modalCreationTitle": "Création d'un équipement",
+	"modalEditEntryTitle": "Edition d'une entrée",
+	"modalEditTaskTitle": "Edition d'une tache",
+	"modalLogintitle": "Login avec un compte existant",
+	"modalResetPasswordTitle": "Changement de mot de passe",
+	"modalSignupTitle": "Signup",
+	"modalTitle": "Edition des information de l'équipement",
+	"model": "Modèle",
+	"month": "Période en mois",
+	"monthperiod": "{month, plural, one {# mois} other {# mois}}",
+	"monthunit": " mois",
+	"name": "Nom",
+	"needVerification": "doit être verifié. Vérifier vos emails.",
+	"newPassword": "Nouveau mot de passe",
+	"no": "Non",
+	"orevery": " ou tous les ",
+	"password": "Mot de passe",
+	"passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
+	"remarks": "Remarques",
+	"remember": "Se souvenir de moi",
+	"resetPassword": "Mot de passe oublié",
+	"retypeNewPassword": "Re-saisir votre nouveau mot de passe",
+	"save": "Sauver",
+	"sendVerification": "Renvoyer la Vérification",
+	"serialPort": "Port Série",
+	"shouldbedone": "Devrait être fait ",
+	"shouldbedonein1": "Devrait être fait dans ",
+	"shouldbedonein2": " équipement ou le ",
+	"shouldhavebeendone": "Aurait due être fait le ",
+	"shouldhavebeendonein": "Aurait due être fait il y a ",
+	"shouldhavebeendonein2": " équipement ou le ",
+	"signout": "Déconnection",
+	"signup": "S'inscrire",
+	"status": "Statut",
+	"taskDeleteMsg": "Etes vous sure de vouloir supprimer cette tache et son historique ?",
+	"taskDeleteTitle": "Suppression d'une tache",
+	"taskHistoryTitle": "Historique",
+	"taskdesc": "Description",
+	"tasklistTitle": "Liste des taches",
+	"taskname": "Nom",
+	"timeType": "Avec la date courante",
+	"tobedonemonth": "A effectuer tous les ",
+	"today": "Aujourd'hui, ",
+	"todo": "A faire",
+	"trackerType": "Avec un tracker d'usage",
+	"usagePeriodInHour": "Période en heure à l'usage",
+	"yearperiod": "{year, plural, one {# année} other {# {années}}",
+	"yes": "Oui"
 }
