Change the message files and check them with a node script launch by npm.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,6 +3,7 @@
    "ackDate": "Realisation date",
    "age": "Equipment Age in hour",
    "ageAcquisitionType": "How do you want to measure the equipment usage time ?",
+   "ageAcquisitionTypeTooltip": "<b>Equipment maintenance</b> application needs to know the equipment usage time to alert you when a task has to be performed.\n3 different ways exist to define the equipment usage time.\nThe most straightforward is to use the current time.\nAnother one is to input manually this time in the application.\nThe last method, the most accurate and automatic is to use a usage time tracker that will publish the usage time online.",
    "ageColumHeader": "Equipment Age",
    "ageToolTip": "Amount of time in hour the equipment was used.",
    "ageUrl": "Equipment Age URL",
@@ -19,6 +20,7 @@
    "date": "Date",
    "dayperiod": "{day, plural, one {# day} other {# days}}",
    "delete": "Delete",
+   "description": "Description",
    "edit": "Edit",
    "email": "Email",
    "emailSent": "An email has been sent. Please, confirm your email by clicking on the link.",
