--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -3,6 +3,7 @@
 	"ackDate": "Date de réalisation",
 	"age": "Age de l'équipement en heure",
 	"ageAcquisitionType": "Comment voulez-vous mesurez l'usage de cet équipement ?",
+	"ageAcquisitionTypeTooltip": "L'application <b>Equipment maintenance</b> a besoin de connaître le temps d'utilisation de l'équipement afin de pouvoir alerter lorsqu'une tache doit être executée.\nIl y a 3 façons de définir le temps d'utilisation de l'equipement.\nLa façon la plus simple est d'utiliser le temps courant.\nUne autre facon est de la saisir manuellement.\nLa dernière façon est d'utiliser un traqueur d'usage qui publie le temps d'utilisation en ligne.",
 	"ageColumHeader": "Age de l'équipement",
 	"ageToolTip": "Nombre d'heure d'utilisation de l'équipement",
 	"ageUrl": "URL pour récupérer l'age de l'équipment",
@@ -19,6 +20,7 @@
 	"date": "Date",
 	"dayperiod": "{day, plural, one {# jour} other {# jours}}",
 	"delete": "Supprimer",
+	"description": "Description",
 	"edit": "Editer",
 	"email": "Email",
 	"emailSent": "Un email a été envoyé. Cliquez sur le lien pour confirmer votre adresse.",
