--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -89,5 +89,6 @@
   "trackerType": "Avec un tracker d'usage",
   "usagePeriodInHour": "Période en heure à l'usage",
   "yearperiod": "{year, plural, one {# année} other {# {années}}",
-  "yes": "Oui"
+  "yes": "Oui",
+  "entryname": "Nom"
 }
