--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -90,5 +90,6 @@
   "usagePeriodInHour": "Période en heure à l'usage",
   "yearperiod": "{year, plural, one {# année} other {# {années}}",
   "yes": "Oui",
-  "entryname": "Nom"
+  "entryname": "Nom",
+  "equipmentHistoryTitle": "Historique de l'équipement"
 }
