--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -26,8 +26,10 @@
   "emailSent": "Un email a été envoyé. Cliquez sur le lien pour confirmer votre adresse.",
   "entryDeleteMsg": "Etes vous sure de vouloir supprimer cette entrée ?",
   "entryDeleteTitle": "Suppression d'une entrée",
+  "entryname": "Nom",
   "equipmentDeleteMsg": "Etes vous sure de vouloir supprimer cet équipement ?",
   "equipmentDeleteTitle": "Suppression d'un équipement",
+  "equipmentHistoryTitle": "Historique de l'équipement",
   "equipmentname": "Nom",
   "errorFetching": "Une erreur est survenue ...",
   "firstname": "Prénom",
@@ -89,7 +91,5 @@
   "trackerType": "Avec un tracker d'usage",
   "usagePeriodInHour": "Période en heure à l'usage",
   "yearperiod": "{year, plural, one {# année} other {# {années}}",
-  "yes": "Oui",
-  "entryname": "Nom",
-  "equipmentHistoryTitle": "Historique de l'équipement"
+  "yes": "Oui"
 }
