--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -91,5 +91,7 @@
   "trackerType": "With a usage time tracker",
   "usagePeriodInHour": "Period in usage hour",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes"
+  "yes": "Yes",
+  "taskTable": "Maintenance tasks",
+  "equipementHistory": "Equipment history"
 }
