--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -27,6 +27,7 @@
   "entryDeleteMsg": "Are you sure you want to delete this entry?",
   "entryDeleteTitle": "Delete entry",
   "entryname": "Name",
+  "equipementHistory": "Equipment history",
   "equipmentDeleteMsg": "Are you sure you want to delete this equipment?",
   "equipmentDeleteTitle": "Delete Equipment",
   "equipmentHistoryTitle": "Equipment history",
@@ -81,6 +82,7 @@
   "taskDeleteMsg": "Are you sure you want to delete this task?",
   "taskDeleteTitle": "Delete task",
   "taskHistoryTitle": "Task history",
+  "taskTable": "Maintenance tasks",
   "taskdesc": "Description",
   "tasklistTitle": "Task list",
   "taskname": "Task name",
@@ -91,7 +93,5 @@
   "trackerType": "With a usage time tracker",
   "usagePeriodInHour": "Period in usage hour",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes",
-  "taskTable": "Maintenance tasks",
-  "equipementHistory": "Equipment history"
+  "yes": "Yes"
 }
